--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=youandme
+
+
+# View Resolver
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#MySql DataSource
+spring.datasource.username: test
+spring.datasource.password: test
+spring.datasource.url: jdbc:mysql://localhost:3306/mydb?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
+
+# Mapper Camel & Snake
+mybatis.configuration.map-underscore-to-camel-case=true
+# Model Location
+mybatis.type-aliases-package=com.sunil.youandme.**.vo, com.sunil.youandme.**.dto
+#Xml Location
+mybatis.mapper-locations=classpath:mappers/*.xml
